--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Poets</title>
   </head>
   <body style="background-color: #508c8c">
